# SIMD-Ray-Marcher

./: .gitignore  CMakeLists.txt  README.md
simd_ray_tracer/: CMakeLists.txt  Camera.cpp  Camera.h  Vec3.cpp  Vec3.h  Vec3x8.cpp  Vec3x8.h  avx_mathfun.h  scalar_ray_march.cpp  scalar_ray_march.h  simd_ray_march.cpp  simd_ray_march.h  stb_image_write.h
